[package]
name = "fat32"
version = "0.1.0"
authors = ["KuangjuX <qcx@tju.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.release]
debug = true

[features]
board_qemu = []
board_k210 = []